k8s/infrastructure/network/envoy-gateway/Service.admin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-admin
  namespace: envoy-gateway-system
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 19000
  selector:
    app.kubernetes.io/instance: envoy-gateway
    app.kubernetes.io/name: gateway-helm
    control-plane: envoy-gateway
