k8s/infrastructure/network/envoy-gateway/valkey.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: envoy-gateway-system
spec:
  replicas: 1
  strategy: {type: Recreate}
  selector:
    matchLabels:
      app.kubernetes.io/name: valkey
      app.kubernetes.io/version: 9.0.3
      app.kubernetes.io/component: key-value-store
      app.kubernetes.io/part-of: envoy-gateway
      # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: envoy-gateway-system
      labels:
        app.kubernetes.io/name: valkey
        app.kubernetes.io/version: 9.0.3
        app.kubernetes.io/component: key-value-store
        app.kubernetes.io/part-of: envoy-gateway
        # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccount: valkey
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: valkey
          # Dockerfile: https://github.com/valkey-io/valkey-container/blob/mainline/9.0/alpine/Dockerfile
          image: index.docker.io/valkey/valkey:9.0.3-alpine3.23
          args: [--save, ""]
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 64Mi}
            limits: {memory: 64Mi}
          ports:
            - {name: valkey, protocol: TCP, containerPort: 6379}
          startupProbe: {tcpSocket: {port: 6379}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 3}
          livenessProbe: {tcpSocket: {port: 6379}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {tcpSocket: {port: 6379}, initialDelaySeconds: 10, periodSeconds: 120}
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/name: valkey
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: valkey
  ports:
    - name: valkey
      protocol: TCP
      port: 6379
      targetPort: valkey
