k8s/infrastructure/network/envoy-gateway/CiliumNetworkPolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-ratelimiter-to-valkey
  namespace: envoy-gateway-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: ratelimit
      app.kubernetes.io/name: envoy-ratelimit
  egress:
  - toEndpoints: [{matchLabels: {app.kubernetes.io/name: valkey}}]
    toPorts: [{ports: [{port: redis, protocol: TCP}]}]
